--- a/Scripts/config_gen_pseudo_mask.json
+++ b/Scripts/config_gen_pseudo_mask.json
@@ -1,8 +1,11 @@
 {
-  "data_root": "Dataset/drywall-pre/valid",
-  "annotations_path": "Dataset/drywall-pre/valid/_annotations.coco.json",
-  "output_dir": "Dataset/drywall-post/valid",
+  "data_root": "Dataset/drywall-pre/train",
+  "annotations_path": "Dataset/drywall-pre/train/_annotations.coco.json",
+  "output_dir": "Dataset/drywall-post/",
   "num_images": null,
+  "train_ratio": 0.8,
+  "valid_ratio": 0.1,
+  "test_ratio": 0.1,
   "edge_detector_type": "canny",
   "canny_low_threshold": 20.0,
   "canny_high_threshold": 40.0,
